# pivoshenko

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  metrics.yaml  set-repository-policies.yaml  update-readme-stats.yaml
scripts/: set_github_policies.py  set_repository_policies.py  update_readme_stats.py
templates/: GUIDELINES.md
