[project]
name = "pivoshenko"
version = "1.0.0"
description = "pivoshenko"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = ["dynaconf>=3.2.12", "httpx>=0.28.1", "loguru>=0.7.3"]

[dependency-groups]
formatters = ["ruff>=0.14.5"]
linters = ["ruff>=0.14.5"]

[tool.ruff]
fix = true
line-length = 100
target-version = "py313"
unsafe-fixes = true

[tool.ruff.lint]
ignore = ["D", "G004", "INP001"]
select = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true
from-first = false
length-sort-straight = true
lines-after-imports = 2
lines-between-types = 1
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
